# CPPChess

./: .gitignore  CMakeLists.txt  README.md  makefile
deprecated/: mask.cpp  mask.hpp  maskgen.cpp  maskgen.hpp  moveutils.cpp  moveutils.hpp
include/: FEN.hpp  attack_mask.hpp  bitboard.h  bitboard.hpp  board.hpp  chess_board.hpp  controller.hpp  encodings.hpp  fen.cpp  fen.hpp  game.cpp  game.hpp  gamestate.cpp  gamestate.hpp  logging.hpp  magic.hpp  mask.cpp  mask.hpp  maskgen.hpp  move.hpp  movegen.hpp  movement.cpp  movement.hpp  moveutils.hpp  precalculate.hpp  state.hpp  types.h  types.hpp  util.cpp  util.hpp
src/: attack_mask.cpp  bitboard.cpp  board.cpp  chess_board.cpp  controller.cpp  game.cpp  gamestate.cpp  logging.cpp  main.cpp  mask.cpp  maskgen.cpp  move.cpp  movegen.cpp  movement.cpp  moveutils.cpp  precalculate.cpp  util.cpp
